--- a/.github/workflows/manual-deploy-ec2.yaml
+++ b/.github/workflows/manual-deploy-ec2.yaml
@@ -1,41 +1,41 @@
-name: Manual Deploy to EC2 (Build on Server)
+# name: Manual Deploy to EC2 (Build on Server)
 
-on:
-  workflow_dispatch:
+# on:
+#   workflow_dispatch:
 
-env:
-  EC2_HOST: ${{ secrets.EC2_HOST }}
-  EC2_USER: ${{ secrets.EC2_USER }}
-  EC2_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-  EC2_PROJECT_PATH: '~/mywebsite-app'
+# env:
+#   EC2_HOST: ${{ secrets.EC2_HOST }}
+#   EC2_USER: ${{ secrets.EC2_USER }}
+#   EC2_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+#   EC2_PROJECT_PATH: '~/mywebsite-app'
 
-jobs:
-  deploy:
-    name: Deploy to EC2
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     name: Deploy to EC2
+#     runs-on: ubuntu-latest
     
-    steps:
-      - name: SSH to EC2 and Run Update Script
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ env.EC2_HOST }}
-          username: ${{ env.EC2_USER }}
-          key: ${{ env.EC2_PRIVATE_KEY }}
+#     steps:
+#       - name: SSH to EC2 and Run Update Script
+#         uses: appleboy/ssh-action@v1.0.3
+#         with:
+#           host: ${{ env.EC2_HOST }}
+#           username: ${{ env.EC2_USER }}
+#           key: ${{ env.EC2_PRIVATE_KEY }}
           
-          script: |
-            # 1. Navigate to your project directory
-            echo "Navigating to ${{ env.EC2_PROJECT_PATH }}..."
-            cd ${{ env.EC2_PROJECT_PATH }}
+#           script: |
+#             # 1. Navigate to your project directory
+#             echo "Navigating to ${{ env.EC2_PROJECT_PATH }}..."
+#             cd ${{ env.EC2_PROJECT_PATH }}
             
-            # 2. Pull the latest code from your git repository
-            echo "Pulling latest code..."
-            git pull
+#             # 2. Pull the latest code from your git repository
+#             echo "Pulling latest code..."
+#             git pull
             
-            # 3. Make your script executable (good practice, just in case)
-            chmod +x ./update_app.sh
+#             # 3. Make your script executable (good practice, just in case)
+#             chmod +x ./update_app.sh
             
-            # 4. Run your existing update script
-            echo "Running update_app.sh..."
-            ./update_app.sh
+#             # 4. Run your existing update script
+#             echo "Running update_app.sh..."
+#             ./update_app.sh
             
-            echo "✅ EC2 deployment complete."
+#             echo "✅ EC2 deployment complete."
