--- a/.github/workflows/local-ci-deployment.yaml
+++ b/.github/workflows/local-ci-deployment.yaml
@@ -1,55 +1,39 @@
-name: Deploy App to EC2
+name: Deploy via Ansible
 
 on:
   push:
     paths:
-      - "app/**"
-  workflow_dispatch:
-  
+      - 'app/**'      # Only trigger on app changes
+    branches:
+      - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Create SSH key file
+      - name: Set up SSH Key
+        # Ansible needs the private key file to connect
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/ec2_key
-          chmod 600 ~/.ssh/ec2_key
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          # Add your Static IP to known_hosts to avoid "Are you sure?" prompt
+          ssh-keyscan -H 98.89.71.95 >> ~/.ssh/known_hosts
 
-      - name: Add EC2 host to known_hosts
+      - name: Create Ansible Inventory
+        # We map your specific Static IP to the 'webserver' group used in the playbook
         run: |
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+          echo "[webserver]" > inventory
+          echo "98.89.71.95 ansible_user=${{ secrets.EC2_USER }}" >> inventory
 
-      - name: Deploy to EC2
+      - name: Run Ansible Playbook
+        # We point to the inventory file created above
         run: |
-          ssh -i ~/.ssh/ec2_key -o StrictHostKeyChecking=no \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-
-          set -e
-
-          cd ~/mywebsite-iac
-
-          echo ">>> Pulling latest repo changes"
-          git pull origin main
-
-          echo ">>> Rebuilding the app image"
-          docker-compose build app
-
-          echo ">>> Restarting only the app container"
-          docker-compose up -d app
-
-          echo ">>> Checking running containers"
-          docker ps
-
-          echo ">>> Waiting 5 seconds for app to start"
-          sleep 5
-
-          echo ">>> Doing curl health check"
-          curl -I https://liormilliger.com || exit 1
-
-          echo ">>> Deployment completed successfully"
-          EOF
+          ansible-playbook ansible/deploy.yaml \
+            -i inventory \
+            --private-key ~/.ssh/id_rsa
+            
